# usg-authenticator

./: .gitignore  .gitmessage  CONTRIBUTING.md  Cargo.toml  DESIGN.md  SERVER-CONTRACT.md
.github/workflows/: ci.yml
crates/authd/: Cargo.toml
crates/authd/src/: config.rs  dispatch.rs  error.rs  lib.rs  main.rs  session.rs  timers.rs  worker.rs
crates/authd/tests/: orchestration.rs
crates/eapol-io/: Cargo.toml
crates/eapol-io/src/: error.rs  lib.rs  socket.rs
crates/eapol-io/tests/: socket.rs
crates/enforce/: Cargo.toml
crates/enforce-sonic/: Cargo.toml
crates/enforce-sonic/src/: db.rs  enforcer.rs  error.rs  lib.rs  redis_conn.rs  schema.rs
crates/enforce-sonic/tests/: enforce.rs
crates/enforce/src/: lib.rs  recording.rs
crates/enforce/tests/: recording.rs
crates/kat/: Cargo.toml
crates/kat/src/: lib.rs
crates/pacp/: Cargo.toml
crates/pacp/src/: eap.rs  error.rs  ethernet.rs  lib.rs  pdu.rs
crates/pacp/tests/: codec.rs
crates/pae/: Cargo.toml
crates/pae/src/: config.rs  effect.rs  event.rs  lib.rs  port.rs  session.rs
crates/pae/tests/: host_modes.rs  state_machine.rs
crates/radius-client/: Cargo.toml
crates/radius-client/src/: accounting.rs  consts.rs  context.rs  eap_message.rs  error.rs  lib.rs  reply.rs  request.rs  sanitize.rs
crates/radius-client/tests/: roundtrip.rs
crates/radsec/: Cargo.toml
crates/radsec/src/: client.rs  error.rs  fips.rs  framing.rs  lib.rs  tls.rs
crates/radsec/tests/: transport.rs
