[package]
name = "pacp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "IEEE 802.1X-2020 EAPOL/PACP frame codec for the authenticator: Ethernet+EAPOL framing and EAP packet header view. Pure, no I/O, no unsafe."

[dev-dependencies]
kat = { path = "../kat" }

[lints]
workspace = true
