[package]
name = "pae"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "IEEE 802.1X-2020 authenticator PAE state machine and per-port host-mode logic. Pure, event-driven, no I/O, no unsafe."

[dependencies]
pacp = { path = "../pacp" }

[lints]
workspace = true
