[package]
name = "radsec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RadSec (RADIUS over TLS 1.3, RFC 6614) transport for the authenticator: ML-KEM-1024-only key exchange, AES-256-GCM, mutual TLS, FIPS via aws-lc-rs."

[dependencies]
radius-proto = { path = "../../../usg-radius/crates/radius-proto", default-features = false }
# TLS 1.3 ONLY: default-features off drops the tls12 feature, so the library
# cannot negotiate TLS 1.2 even by mistake. aws_lc_rs provides ML-KEM-1024.
rustls = { version = "0.23.40", default-features = false, features = ["aws_lc_rs", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
tokio = { version = "1", features = ["net", "io-util", "time"] }
rustls-pki-types = "1"
rustls-pemfile = "2"

[features]
default = []
# Production: build aws-lc-rs as the FIPS 140-3 module. Needs cmake/go/perl.
fips = ["rustls/fips", "tokio-rustls/fips"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util"] }

[lints]
workspace = true
